--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.4.4",
     "@angular/router": "^4.4.4",
     "@webcomponents/custom-elements": "^1.0.0",
+    "angular2-highcharts": "^0.5.5",
     "angular2-jwt": "^0.2.3",
     "clarity-angular": "^0.10.13",
     "clarity-icons": "^0.10.13",
