--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^4.4.4",
     "@angular/common": "^4.4.4",
     "@angular/compiler": "^4.4.4",
@@ -36,6 +37,7 @@
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "^4.4.4",
     "@angular/language-service": "^4.4.4",
+    "@types/googlemaps": "^3.30.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
