--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clarity-ui": "^0.10.13",
     "core-js": "^2.4.1",
     "moment": "^2.19.2",
+    "ng-socket-io": "^0.2.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
